--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.1.9",
+    "@ai-sdk/openai": "^1.1.13",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/postcss": "4.0.6",
+    "ai": "^4.1.45",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "next": "15.2.0-canary.64",
+    "ollama-ai-provider": "^1.2.0",
     "postcss": "^8.5.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
